# license_service

./: .flake8  .pre-commit-config.yaml  Explanation.md  Makefile  README.md  env.example  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
license_service/: asgi.py  settings.py  urls.py  wsgi.py
licenses/: admin.py  models.py  serializers.py  urls.py  views.py
licenses/migrations/: 0001_initial.py  0002_activation_deactivation_reason_and_more.py
tests/: __init__.py  conftest.py  test_admin.py  test_api.py  test_models.py  test_swagger.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
